tests/fail/ambiguous_build_recipe.werk
config default = "foofoo"

build "%foo" {
    info "<out>"
}

build "foo%" {
    info "<out>"
}
